# agentscope-paas

./: .gitignore  AGENT_CONFIG_COMPRESSION_GUIDE.md  API_SERVER_README.md  ARCHITECTURE.md  AgentScope.md  CLAUDE.md  COMPRESSION_INTEGRATION_SUCCESS_REPORT.md  E2E_FINAL_SUCCESS_REPORT.md  E2E_TESTING_GUIDE.md  E2E_TEST_RESULTS.md  E2E_TEST_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  START_HERE.md  TESTING_README.md  docker-compose.test.yml  fix_frontend_and_test.sh  monitor_tests.py  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_agent_chat_test.bat  run_agent_chat_test.sh  run_e2e_complete.bat  run_integration_tests.bat  run_integration_tests.sh  run_playwright_agent_test.bat  run_playwright_agent_test.sh  run_playwright_test.bat  setup.py  show_test_results.py  start_all.bat  start_all.sh  start_backend.bat  (+7 more)
agentscope_paas/: __init__.py
agentscope_paas/auth/: __init__.py  middleware.py  security.py
agentscope_paas/cli/: __init__.py  config_processor.py  error_handler.py  interactive.py  launcher.py  main.py
agentscope_paas/compression/: __init__.py  engine.py
agentscope_paas/config/: __init__.py  loader.py  runtime_mapper.py  validator.py
agentscope_paas/core/: __init__.py  async_chat_processor.py  engine.py  runtime_manager.py
agentscope_paas/deployment/: __init__.py  production_utils.py
agentscope_paas/factory/: __init__.py  agent_factory.py  runtime_agent_factory.py  team_factory.py
agentscope_paas/lifecycle/: __init__.py  advanced_lifecycle.py
agentscope_paas/mcp/: __init__.py  client.py
agentscope_paas/memory/: __init__.py  session_memory_service.py
agentscope_paas/monitoring/: __init__.py  runtime_monitor.py
agentscope_paas/performance/: __init__.py  runtime_optimizer.py
agentscope_paas/storage/: __init__.py  base.py  memory.py  models.py  redis_storage.py
agentscope_paas/tools/: __init__.py  registry.py
agentscope_paas/utils/: __init__.py  exceptions.py  logger.py  runtime_validator.py
api_server/: main.py
api_server/routers/: __init__.py  auth.py  conversation.py  runtime.py
api_server/utils/: streaming.py
docs/: api_design.md  database_design.md  frontend_design_proposal.md  memory_config_upgrade.md  system_architecture.md
docs/superpowers/plans/: 2024-01-15-authentication-system.md  2025-01-06-cli-implementation.md  2025-01-06-e2e-testing-implementation.md
docs/superpowers/specs/: 2024-01-15-authentication-system-design.md  2025-01-06-cli-design.md  2025-01-06-e2e-testing-design.md
e2e/: agent_creation_chat_test.py  agent_creation_e2e_test.py  agent_creation_ui_test.py  api_e2e_test.py  complete_agent_chat_e2e.py  complete_agent_test.py  complete_auth_e2e.py  complete_e2e_test.py  comprehensive_integration_test.py  comprehensive_playwright_test.py  final_solution_e2e.py  frontend_ui_test.py  http_functional_test.py  main_test_runner.py  performance_test.py  playwright_frontend_test.py  real_agent_creation_chat_test.py  requirements.txt  robust_agent_chat_test.py  robust_agent_creation_test.py  simple_e2e_test.py  test_browser_api_integration.py  test_config.json  test_login_and_agent_creation.py  test_pytest_e2e.py  test_session_memory_integration.py  verify_setup.py
e2e_reports/: detailed_debug_report.json
examples/: README.md  agent_with_compression.yaml  agent_with_session_memory.yaml  customer_service_agent.yaml  quick_start_guide.md  simple_chatbot.yaml  software_dev_team.yaml
frontend/: .env.example  FRONTEND_CHANGES_SUMMARY.md  FRONTEND_UPDATE_SUMMARY.md  FRONTEND_VERIFICATION_REPORT.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md  README_SKILLS_UPDATE.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
scripts/: prepare_e2e_env.py  start_services.py  verify_e2e_setup.py
skills/: README.md  UPLOAD_GUIDE.md  skill_template.yaml
skills/examples/: order_processing.SKILL.md  order_processing.yaml
tests/: test_auth_api.py  test_auth_middleware.py  test_cli.py  test_config_processor.py  test_error_handler.py  test_interactive.py  test_launcher.py  test_runtime_api.py  test_runtime_comprehensive.py  test_runtime_simple.py  test_security.py  test_session_memory.py  test_storage.py
(+57 files in other folders)
